[tool.poetry]
name = "planner-fastapi"
version = "0.1.0"
description = ""
authors = ["CodeAkio <siqueira_2004@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"
pydantic = {extras = ["email"], version = "^2.7.4"}
beanie = "^1.26.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^8.2.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
coverage = "^7.5.3"
pydantic-settings = "^2.3.3"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
